# experiments

./: README.md  main.ipynb  playwright.ipynb
api/: pyproject.toml
courses/cs336/assignment2-systems/cs336-basics/cs336_basics/: data.py  model.py
courses/cs336/assignment2-systems/tests/: adapters.py  common.py  conftest.py  test_ddp.py  test_ddp_individual_parameters.py  test_sharded_optimizer.py
courses/deepul/: .gitignore  requirements.txt  setup.py
courses/deepul/deepul/: hw1_helper.py  hw2_helper.py  hw3_helper.py  hw4_helper.py  utils.py
courses/deepul/deepul/hw3_utils/: hw3_models.py
courses/deepul/deepul/models/: decoder.py  encoder.py  vae.py
courses/deepul/homeworks/hw1/: hw1.ipynb
courses/deepul/homeworks/hw2/: hw2.ipynb
courses/deepul/homeworks/hw3/: hw3.ipynb
courses/deepul/homeworks/hw4/: hw4.ipynb
da_agent/: app.py  main.ipynb  requirements.txt
da_agent/components/: query_runner.py  sql_storage.py  stock_data_source.py
da_agent/utils/: time_utils.py
demo-mcp/: compose.yaml
demos/demo-mcp/: README.md  playwright.ipynb
demos/demo-mcp/api/: Dockerfile  main.py
demos/demo-mcp/other_mcp_server/: Dockerfile  main.py  pyproject.toml
demos/writing_tool/: README.md  main.py  pyproject.toml
demos/writing_tool/src/writing_tool/: __init__.py  logging_config.py  utils.py
demos/writing_tool/src/writing_tool/entities/: __init__.py  bounding_box.py  detection_result.py
demos/writing_tool/src/writing_tool/services/: __init__.py  image_service.py  inpainting_service.py  object_detection_service.py  prompt_normalization_service.py  segmentation_service.py  visualization_service.py  writing_tool_service.py
kaggle/playground-series-s5e6/: .gitignore  main.ipynb
kaggle/playground-series-s5e7/: main.ipynb
