[project]
name = "demo_api"
version = "0.1.0"
description = "Demo API for testing purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-mcp>=0.3.4",
    "fastapi[standard]>=0.112.1",
    "fastmcp>=2.4.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.30.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
